      included in the hash sum by setting the `CCACHE_EXTRAFILES` option.

    - Added support for long command-line options.

    - A `CACHEDIR.TAG` file is now created in the cache directory. See
      <http://www.brynosaurus.com/cachedir/>.

    - Messages printed to the debug log (specified by `CCACHE_LOGFILE`) have
      been improved.

    - `CCACHE_TEMPDIR` no longer needs to be on the same filesystem as
      `CCACHE_DIR`.

    - The default value of `CCACHE_TEMPDIR` has been changed to
      `$CCACHE_DIR/tmp` to avoid cluttering the top directory.

    - Temporary files that later will be moved into the cache are now created
      in the cache directory they will end up in. This makes ccache more
      friendly to Linux's directory layout.

    - Improved the test suite and added tests for most of the new
      functionality. It's now also possible to specify a subset of tests to
      run.

    - Standard error output from the compiler is now only stored in the cache
      if it's non-empty.

    - If the compiler produces no object file or an empty object file, but
      gives a zero exit status (could be due to a file system problem, a buggy
      program specified by `CCACHE_PREFIX`, etc.), ccache copes with it
      properly.

    - Added installcheck and distcheck make targets.

    - Clarified cache size limit options' semantics.

    - Improved display of cache max size values.

    - For debugging purposes, the variable `CCACHE_VERBOSE` may now be set to
      make ccache print executed commands to standard output.

    - The following options are no longer hashed in the preprocessor mode:
      `-imacros`, `-imultilib`, `-iprefix`, `-iquote`, `-isysroot`,
      `-iwithprefix`, `-iwithprefixbefore`, `-nostdinc`, `-nostdinc++` and
      `-U`.


Bug fixes
~~~~~~~~~

    - Fixed build on FreeBSD.

    - Improved detection of home directory.

    - User-defined `CPPFLAGS` and `LDFLAGS` are now respected in the Makefile.

    - Fixed NFS issues.
